Add fluent interface to support filtering of complex object graphs.